Add online users broadcast and API
